@@ -147,6 +147,11 @@ SVN trunk (1.1.x):
    * renamed "Across The River" map to "Across the River"
    * made "Load Game ..." first map option (was last), for better visibility
    * added map size to MP lobby (patch #484)
+   * new multiplayer preference tab in the preference window (patch 444 by
+   majestyk)
+   * add an option to timestamp chat in MP games (patch 444 by majestyk)
+   * add an option to choose the number of chat lines displayed (patch 444 by
+   majestyk)
  * campaign server
    * support new "timestamp" attribute
    * save persistent attributes in the campaign data
